Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-11-17 Gal
 PATCH: [ 1598194 ] New command line parser
  Src: MainFrm.cpp Merge.cpp Merge.dsp Merge.h
  Src added files: ClearCaseCmdLineParser.cpp ClearCaseCmdLineParser.h
   CmdLineParser.h MergeCmdLineInfo.cpp MergeCmdLineInfo.h
   WinMergeCmdLineParser.cpp WinMergeCmdLineParser.h
  Src removed files: CmdArgs.cpp CmdArgs.h MergeArgs.cpp

2006-11-17 Gal
 PATCH: Moved white-space trimming to FileFilterHelper class
  Src: FileFilterHelper.cpp

2006-11-16 WinMerge experimental release 2.7.1.1 (SVN revision 3810)

2006-11-15 Kimmo
 PATCH: [ 1596692 ] Change the way modified docs are saved to fix several issues
  Src: MainFrm.cpp MergeDiffDetailView.cpp MergeDoc.cpp MergeDoc.h

2006-11-14 Gal
 BUG: [ 1596285 ] Unresolved external symbol __abs64 with VC7.1
  Src: StdAfx.cpp StdAfx.h

2006-11-13 Gal
 BUG: [ 1594188 ] /x option does not work
  Src: MergeDoc.cpp

2006-11-11 Takashi
 PATCH: [ 1586689 ] True color bookmark icon
  Src/editlib: ccrystaltextview.cpp
  Src/res: mg_icons.bmp

2006-11-09 Gal
 PATCH: [ 1590737 ] BCMenu update to v3.036
  Src: BCMenu.cpp BCMenu.h

2006-11-09 Kimmo
 PATCH: [ 1591532 ] Remove unused XmlDoc class
  Src: Merge.dsp
  Src removed files: XmlDoc.cpp XmlDoc.h

2006-11-07 Kimmo
 Add PCRE 6.7 (with windows build files from ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/Contrib/)
  New folder: /Externals/pcre
 PATCH: [ 1591605 ] Add PCRE regexps and convert file filtering to PCRE
  Src: FileFilterMgr.cpp FileFilterMgr.h Merge.dsp Plugins.cpp
  Src new files: Ucs2Utf8.cpp Ucs2Utf8.h

2006-11-06 Takashi
 PATCH: [ 1586705 ] DirView icons (Tim made [not]equalfile.ico)
  Src/res: equalfile.ico fileskip.ico lfile.ico notequalfile.ico rfile.ico

2006-11-06 Kimmo
 PATCH: [ 1590892 ] Handle unicode paths for project files
  Src: ProjectFile.cpp

2006-11-03 Kimmo